--- a/config/database.yml
+++ b/config/database.yml
@@ -23,5 +23,5 @@ test:
 
 # Store production database in the storage/ directory, which by default
 # is mounted as a persistent Docker volume in config/deploy.yml.
-production:
-  url: <%= ENV["DATABASE_URL"] %>
+primary:
+    url: <%= ENV["DATABASE_URL"] %>
