--- a/config/database.yml
+++ b/config/database.yml
@@ -25,4 +25,5 @@ test:
 # is mounted as a persistent Docker volume in config/deploy.yml.
 production:
   primary:
+    adapter: postgresql
     url: <%= ENV["DATABASE_URL"] %>
